@@ -1,3 +1,7 @@
+1998-08-28  Yo Ric Dude  <ericmit@ix.netcom.com>
+
+	* audio_alsa.c: Nick Lopez - added the missing audio_alsa.c
+
 1998-08-09  Yo Ric Dude  <ericmit@ix.netcom.com>
 
 	* audio_irix.c: Kimball Thurston - corrections for irix.
